objects/ASI_eForm_Return_Order_Request_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Amount_Replace__c</fullName>
        <label>Amount(Replace)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Amount_Return__c</fullName>
        <label>Amount(Return)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Complaint_Category__c</fullName>
        <label>Complaint Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blocking (블로킹)</fullName>
                </value>
                <value>
                    <fullName>Bottle (병)</fullName>
                </value>
                <value>
                    <fullName>Cap (마개)</fullName>
                </value>
                <value>
                    <fullName>Capsule (금속 캡슐)</fullName>
                </value>
                <value>
                    <fullName>Counterfeit (위조품)</fullName>
                </value>
                <value>
                    <fullName>Foreign matter (이물)</fullName>
                </value>
                <value>
                    <fullName>Label (상표)</fullName>
                </value>
                <value>
                    <fullName>Leakage (누주)</fullName>
                </value>
                <value>
                    <fullName>Low fill (용량 부족)</fullName>
                </value>
                <value>
                    <fullName>Taste (맛이상)</fullName>
                </value>
                <value>
                    <fullName>Others (기타)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Complaint_Details__c</fullName>
        <label>Complaint Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Complaint_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blocking (블로킹)</fullName>
                </value>
                <value>
                    <fullName>Bottle appearance (병외관 불량)</fullName>
                </value>
                <value>
                    <fullName>Broken bottle (파손)</fullName>
                </value>
                <value>
                    <fullName>Crack (금)</fullName>
                </value>
                <value>
                    <fullName>Scratch (병 긁힘)</fullName>
                </value>
                <value>
                    <fullName>Capping defect (마개 장착 불량)</fullName>
                </value>
                <value>
                    <fullName>Cork defect (코르크 마개 불량)</fullName>
                </value>
                <value>
                    <fullName>Damaged cap (마개 손상)</fullName>
                </value>
                <value>
                    <fullName>Cap assembly defect (마개 조립 불량)</fullName>
                </value>
                <value>
                    <fullName>Not operated genuine mark (정품표시 작동불량)</fullName>
                </value>
                <value>
                    <fullName>Spinning cap (공회전)</fullName>
                </value>
                <value>
                    <fullName>Too loose (너무 쉽게 열림 / 이지 오픈)</fullName>
                </value>
                <value>
                    <fullName>Turned genuine mark (개봉전 정품표시 보임)</fullName>
                </value>
                <value>
                    <fullName>Unable/Hard to open (개봉불가 / 개봉어려움)</fullName>
                </value>
                <value>
                    <fullName>Wrong cap (마개 상이)</fullName>
                </value>
                <value>
                    <fullName>Capsule printing defect (금속캡슐 인쇄 불량)</fullName>
                </value>
                <value>
                    <fullName>Damaged capsule (금속캡슐 손상)</fullName>
                </value>
                <value>
                    <fullName>Loose capsule (금속캡슐 성형불량)</fullName>
                </value>
                <value>
                    <fullName>Counterfeit (위조품)</fullName>
                </value>
                <value>
                    <fullName>Foreign matter (이물)</fullName>
                </value>
                <value>
                    <fullName>Contaminated Label (상표 오염)</fullName>
                </value>
                <value>
                    <fullName>Damaged label (상표 손상)</fullName>
                </value>
                <value>
                    <fullName>Label printing defect (상표 인쇄불량)</fullName>
                </value>
                <value>
                    <fullName>Missing label (상표 없슴)</fullName>
                </value>
                <value>
                    <fullName>Leakage (누주)</fullName>
                </value>
                <value>
                    <fullName>Low fill (용량 부족)</fullName>
                </value>
                <value>
                    <fullName>Taste (맛이상)</fullName>
                </value>
                <value>
                    <fullName>Deterioration (내용물 품질 저하)</fullName>
                </value>
                <value>
                    <fullName>Floc (플로킹)</fullName>
                </value>
                <value>
                    <fullName>Others (기타)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Item_Group_Replace__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group(Replace)</label>
        <referenceTo>ASI_KOR_Item_Group__c</referenceTo>
        <relationshipLabel>Return Order Request Line Items (Item Group(Replace))</relationshipLabel>
        <relationshipName>Return_Order_Request_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Item_Group_Return__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group(Return)</label>
        <referenceTo>ASI_KOR_Item_Group__c</referenceTo>
        <relationshipLabel>Return Order Request Line Items</relationshipLabel>
        <relationshipName>Return_Order_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Production_Date__c</fullName>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Production_Time__c</fullName>
        <label>Production Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Quantity_Replace__c</fullName>
        <label>Quantity(Replace)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Quantity_Return__c</fullName>
        <label>Quantity(Return)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Return_Order_Request__c</fullName>
        <label>Return Order Request</label>
        <referenceTo>ASI_eForm_Return_Order_Request__c</referenceTo>
        <relationshipLabel>Return Order Request Line Items</relationshipLabel>
        <relationshipName>Return_Order_Request_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_UOM_Replace__c</fullName>
        <label>UOM(Replace)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                    <default>true</default>
                    <label>Case</label>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_UOM_Return__c</fullName>
        <label>UOM(Return)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                    <default>true</default>
                    <label>Case</label>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Unit_Price_Replace__c</fullName>
        <label>Unit Price(Replace)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Unit_Price_Return__c</fullName>
        <label>Unit Price(Return)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Return Order Request Line Items</relationshipLabel>
        <relationshipName>Return_Order_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Return Order Request Line Item</label>
    <nameField>
        <displayFormat>ROL-{000000}</displayFormat>
        <label>Return Order Request Line Items No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Order Request Line Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_Return_Order_Detail</fullName>
        <active>true</active>
        <label>KR Return Order Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>